argocd/apps/harbor/config/harbor-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-harbor
  hostnames:
    - harbor.ass-nss.jkuzel02.online
  rules:
    - backendRefs:
        - name: harbor
          port: 80
